--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,17 @@ add_library(fsm INTERFACE)
 target_include_directories(fsm INTERFACE include/)
 target_link_libraries(fsm INTERFACE dephier)
 
+option(CODE_COVERAGE "Enable coverage reporting" OFF)
+if(CODE_COVERAGE AND CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
+  # Add required flags (GCC & LLVM/Clang)
+  target_compile_options(fsm INTERFACE -O0 -g --coverage)
+  if(CMAKE_VERSION VERSION_GREATER_EQUAL 3.13)
+    target_link_options(fsm INTERFACE --coverage)
+  else()
+    target_link_libraries(fsm INTERFACE --coverage)
+  endif()
+endif()
+
 include_directories(submodules)
 
 add_executable(fsm_paper_tests.exe paper/fsm_paper_tests.cpp)
@@ -26,12 +37,34 @@ add_executable(fsm_paper_scaling_tests.exe paper/fsm_paper_scaling_tests.cpp)
 target_link_libraries(fsm_paper_scaling_tests.exe PRIVATE fsm richdem ${NETCDF_LIBRARIES})
 target_compile_features(fsm_paper_scaling_tests.exe PUBLIC cxx_auto_type cxx_std_17)
 
+
+
 add_executable(fsm_unittests.exe
   unittests/test_main.cpp
   unittests/fsm_tests.cpp
 )
 target_link_libraries(fsm_unittests.exe PRIVATE fsm richdem ${NETCDF_LIBRARIES})
 target_compile_features(fsm_unittests.exe PUBLIC cxx_auto_type cxx_std_17)
+
+option(CODE_COVERAGE "Enable coverage reporting" OFF)
+if(CODE_COVERAGE AND CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
+  # Add required flags (GCC & LLVM/Clang)
+  target_compile_options(fsm_unittests.exe PRIVATE -O0 -g --coverage)
+  if(CMAKE_VERSION VERSION_GREATER_EQUAL 3.13)
+    target_link_options(fsm_unittests.exe PRIVATE --coverage)
+  else()
+    target_link_libraries(fsm_unittests.exe PRIVATE --coverage)
+  endif()
+
+  add_custom_command(TARGET fsm_unittests.exe POST_BUILD
+    COMMAND ./fsm_unittests.exe
+    COMMAND ${CMAKE_COMMAND} -E make_directory ${CMAKE_BINARY_DIR}/gcoverage
+    COMMAND ${CMAKE_COMMAND} -E make_directory ${CMAKE_BINARY_DIR}/lcoverage
+    COMMAND gcovr -r ${CMAKE_CURRENT_SOURCE_DIR} --html --html-details -o ${CMAKE_BINARY_DIR}/gcoverage/coverage.html
+    COMMAND lcov --capture --directory ${CMAKE_CURRENT_SOURCE_DIR} --output-file ${CMAKE_BINARY_DIR}/lcoverage/coverage.info
+    COMMAND genhtml ${CMAKE_BINARY_DIR}/lcoverage/coverage.info --output-directory ${CMAKE_BINARY_DIR}/lcoverage/
+  )
+endif()
 
 add_executable(test_temp.exe
   unittests/test_temp.cpp
