--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required (VERSION 3.9)
 
-project (dephier)
+project(fsm)
+
+find_package(GDAL)
 
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 
@@ -17,35 +19,27 @@ add_library(fsm INTERFACE)
 target_include_directories(fsm INTERFACE include/)
 target_link_libraries(fsm INTERFACE dephier)
 
-option(CODE_COVERAGE "Enable coverage reporting" OFF)
-if(CODE_COVERAGE AND CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
-  # Add required flags (GCC & LLVM/Clang)
-  target_compile_options(fsm INTERFACE -O0 -g --coverage)
-  if(CMAKE_VERSION VERSION_GREATER_EQUAL 3.13)
-    target_link_options(fsm INTERFACE --coverage)
-  else()
-    target_link_libraries(fsm INTERFACE --coverage)
-  endif()
+# include_directories(submodules)
+
+if(USE_GDAL AND GDAL_FOUND)
+  add_executable(fsm_paper_tests.exe paper/fsm_paper_tests.cpp)
+  target_link_libraries(fsm_paper_tests.exe PRIVATE fsm richdem)
+  target_compile_features(fsm_paper_tests.exe PUBLIC cxx_auto_type cxx_std_17)
+
+  add_executable(fsm_paper_speed_comparison.exe paper/fsm_paper_speed_comparison.cpp)
+  target_link_libraries(fsm_paper_speed_comparison.exe PRIVATE fsm richdem)
+  target_compile_features(fsm_paper_speed_comparison.exe PUBLIC cxx_auto_type cxx_std_17)
+
+  add_executable(fsm.exe src/main.cpp)
+  target_link_libraries(fsm.exe PRIVATE fsm richdem)
+  target_compile_features(fsm.exe PUBLIC cxx_auto_type cxx_std_17)
+else()
+  message(WARNING "GDAL is needed to build some of the FSM performance tests and example programs!")
 endif()
-
-include_directories(submodules)
-
-add_executable(fsm_paper_tests.exe paper/fsm_paper_tests.cpp)
-target_link_libraries(fsm_paper_tests.exe PRIVATE fsm richdem)
-target_compile_features(fsm_paper_tests.exe PUBLIC cxx_auto_type cxx_std_17)
-
-add_executable(fsm_paper_speed_comparison.exe paper/fsm_paper_speed_comparison.cpp)
-target_link_libraries(fsm_paper_speed_comparison.exe PRIVATE fsm richdem)
-target_compile_features(fsm_paper_speed_comparison.exe PUBLIC cxx_auto_type cxx_std_17)
 
 add_executable(fsm_paper_scaling_tests.exe paper/fsm_paper_scaling_tests.cpp)
 target_link_libraries(fsm_paper_scaling_tests.exe PRIVATE fsm richdem)
 target_compile_features(fsm_paper_scaling_tests.exe PUBLIC cxx_auto_type cxx_std_17)
-
-add_executable(fsm.exe src/main.cpp)
-target_link_libraries(fsm.exe PRIVATE fsm richdem)
-target_compile_features(fsm.exe PUBLIC cxx_auto_type cxx_std_17)
-
 
 add_executable(fsm_unittests.exe
   unittests/test_main.cpp
@@ -73,13 +67,3 @@ if(CODE_COVERAGE AND CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
     COMMAND genhtml ${CMAKE_BINARY_DIR}/lcoverage/coverage.info --output-directory ${CMAKE_BINARY_DIR}/lcoverage/
   )
 endif()
-
-add_executable(test_temp.exe
-  unittests/test_temp.cpp
-)
-target_link_libraries(test_temp.exe PRIVATE fsm richdem)
-target_compile_features(test_temp.exe PUBLIC cxx_auto_type cxx_std_17)
-
-
-install(TARGETS fsm_paper_tests.exe DESTINATION bin)
-install(TARGETS fsm_paper_speed_comparison.exe DESTINATION bin)
