--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,6 +52,7 @@ option(CODE_COVERAGE "Enable coverage reporting" OFF)
 if(CODE_COVERAGE AND CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
   # Add required flags (GCC & LLVM/Clang)
   target_compile_options(fsm_unittests.exe PRIVATE -O0 -g --coverage)
+  target_compile_definitions(fsm_unittests.exe PRIVATE -DCODE_COVERAGE)
   if(CMAKE_VERSION VERSION_GREATER_EQUAL 3.13)
     target_link_options(fsm_unittests.exe PRIVATE --coverage)
   else()
